<resources>
    <string name="app_name">Hackathon</string>
    <string name="action_settings">Settings</string>
    <string name="event">Event</string>
    <string name="title_activity_display_event">Display Event</string>
    <string name="title_activity_user_profile">userProfile</string>
    <string name="greeting">Hello hey</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_repeat_password">Repeat Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_back">Back</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">registerActivity</string>
    <string name="title_activity_event_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_alarm">Enable Managed Alarm</string>
    <string name="pref_description_alarm">Set up an alarm a set time before the event that will change if the the event is moved or cancelled</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_alarm_title">How much time before the event</string>
    <string name="pref_alarm_description">Set an alarm a certain time before the managed event</string>
    <string-array name="pref_alarm_time">
        <item>15 minutes before</item>
        <item>30 minutes before</item>
        <item>45 minutes before</item>
        <item>1 hour before</item>
        <item>1 hour 15 minutes before</item>
        <item>1 hour 30 minutes before</item>
        <item>1 hour 45 minutes before</item>
        <item>2 hours before</item>
        <item>2 hours 15 minutes</item>
        <item>2 hours 30 minutes</item>
        <item>2 hours 45 minutes before</item>
        <item>3 hours before</item>
    </string-array>
    <string-array name="pref_alarm_time_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string name="pref_title_override_alarm">Ignore Scheduling Changes</string>
    <string name="pref_description_override_alarm">If event is moved or cancelled, alarm will go off anyway at the original time</string>
    <string name="pref_title_confirm_alarm">Confirm Alarm</string>
    <string name="pref_description_confirm_alarm">Confirm the alarm by asking if you want it prior to it going off.</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_confirm_alarm_picker_title">When to confirm alarm</string>
    <string-array name="pref_confirm_alarm_list">
        <item>15 minutes before</item>
        <item>30 minutes before</item>
        <item>1 hour before</item>
        <item>2 hours before</item>
        <item>6 hours before</item>
        <item>12 hours before</item>
        <item>1 day before</item>
        <item>2 days before</item>
        <item>3 days before</item>
        <item>1 week before</item>
    </string-array>
    <string-array name="pref_confirm_alarm_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string name="pref_title_changes">Event Change Notifications</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_event_settings_fragment">eventSettingsFragment</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="title_activity_event_creater">Event Creator</string>
    <string name="prompt_event_name">Event Name</string>
    <string name="hello_world">Hello world!</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
</resources>