<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:id="@+id/pref_alarm"
        android:defaultValue="true"
        android:key="pref_alarm"
        android:summary="@string/pref_description_alarm"
        android:title="@string/pref_title_alarm" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_alarm_time"
        android:entryValues="@array/pref_alarm_time_values"
        android:key="alarm_time_picker"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_alarm_title"
        android:description="@string/pref_alarm_description"
        android:dependency="pref_alarm"/>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />

</PreferenceScreen>
